k8s/dev/baileys-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baileys
  namespace: dev
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: baileys
  template:
    metadata:
      labels:
        app: baileys
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: baileys
          image: ghcr.io/kelmordigital/api-baileys-kelmor:latest
          ports:
            - containerPort: 4001
          resources:
            requests:
              cpu: "50m"
              memory: "150Mi"
            limits:
              cpu: "250m"
              memory: "300Mi"
          readinessProbe:
            httpGet:
              path: /test/
              port: 4001
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /test/
              port: 4001
            initialDelaySeconds: 30
            periodSeconds: 20
