k8s/dev/api-04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-04
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: api-04
  ports:
    - port: 80
      targetPort: 3000
