k8s/dev/baileys-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: baileys
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: baileys
  ports:
    - port: 80
      targetPort: 4001
