k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kelmor-ingress
  namespace: dev
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dev-api.kelmor.cloud
        - dev-bays.kelmor.cloud
      secretName: kelmor-dev-tls
  rules:
    - host: dev-api.kelmor.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-04
                port:
                  number: 80
    - host: dev-bays.kelmor.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: baileys
                port:
                  number: 80
